--- a/index.html
+++ b/index.html
@@ -18,17 +18,28 @@
         <link href="css/styles.css" rel="stylesheet" />
     </head>
     <body>
-       <!--  {
-  "Popular": [
-    {
-      "ImageUrl": "https://res.cloudinary.com/trendbrains/image/upload/q_auto:best/v1622862726/Glaze%20Lite/adam-birkett-F5wrgv2jCpw-unsplash_tgdwec.png"
-    },
-    {
-      "ImageUrl": "https://res.cloudinary.com/trendbrains/image/upload/q_auto:best/v1622862727/Glaze%20Lite/alex-dukhanov-RHItvgIJfgw-unsplash_w9wkid.jpg"
-    },
-    {
-      "ImageUrl": "https://res.cloudinary.com/trendbrains/image/upload/q_auto:best/v1622863428/Glaze%20Lite/samuel-ferrara-dKJXkKCF2D8-unsplash_lhgspd.jpg"
-    }]
-}  -->
+       <nav class="navbar navbar-expand-lg navbar-light fixed-top shadow-sm" id="mainNav">
+        <div class="container px-5">
+            <a class="navbar-brand fw-bold" href="#page-top">Trendbrains</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive"
+                aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+                Menu
+                <i class="bi-list"></i>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarResponsive">
+                <ul class="navbar-nav ms-auto me-4 my-3 my-lg-0">
+                    <li class="nav-item"><a class="nav-link me-lg-3" href="#features">Features</a></li>
+                    <li class="nav-item"><a class="nav-link me-lg-3" href="#download">Download</a></li>
+                </ul>
+                <button class="btn btn-primary rounded-pill px-3 mb-2 mb-lg-0" data-bs-toggle="modal"
+                    data-bs-target="#feedbackModal">
+                    <span class="d-flex align-items-center">
+                        <i class="bi-chat-text-fill me-2"></i>
+                        <span class="small">Send Feedback</span>
+                    </span>
+                </button>
+            </div>
+        </div>
+    </nav>
     </body>
 </html>
