--- a/index.html
+++ b/index.html
@@ -18,28 +18,23 @@
         <link href="css/styles.css" rel="stylesheet" />
     </head>
     <body>
-       <nav class="navbar navbar-expand-lg navbar-light fixed-top shadow-sm" id="mainNav">
+      <!-- Basic features section-->
+    <section class="bg-light">
         <div class="container px-5">
-            <a class="navbar-brand fw-bold" href="#page-top">Trendbrains</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive"
-                aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-                Menu
-                <i class="bi-list"></i>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarResponsive">
-                <ul class="navbar-nav ms-auto me-4 my-3 my-lg-0">
-                    <li class="nav-item"><a class="nav-link me-lg-3" href="#features">Features</a></li>
-                    <li class="nav-item"><a class="nav-link me-lg-3" href="#download">Download</a></li>
-                </ul>
-                <button class="btn btn-primary rounded-pill px-3 mb-2 mb-lg-0" data-bs-toggle="modal"
-                    data-bs-target="#feedbackModal">
-                    <span class="d-flex align-items-center">
-                        <i class="bi-chat-text-fill me-2"></i>
-                        <span class="small">Send Feedback</span>
-                    </span>
-                </button>
+            <div class="row gx-5 align-items-center justify-content-center justify-content-lg-between">
+                <div class="col-12 col-lg-5">
+                    <h2 class="display-4 lh-1 mb-4">Share Feedback & Ideas</h2>
+                    <p class="lead fw-normal text-muted mb-5 mb-lg-0">Feel free to share your valuable feedback and
+                        ideas. If you face any issues related to our apps. you can directly contact our support team. We
+                        try to resolve your problem as soon. Share your ideas related to improve our apps or create
+                        something new!</p>
+                </div>
+                <div class="col-sm-8 col-md-6">
+                    <div class="px-5 px-sm-0"><img class="img-fluid rounded-circle"
+                            src="assets/img/circle_feedback_image.webp" alt="..." /></div>
+                </div>
             </div>
         </div>
-    </nav>
+    </section>
     </body>
 </html>
