--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>Glaze</title>
+        <title>Developers Center</title>
         <link rel="icon" type="image/x-icon" href="" />
         <!-- Bootstrap icons-->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
@@ -31,10 +31,10 @@
                 </div>
                 <div class="col-sm-8 col-md-6">
                     <div class="px-5 px-sm-0"><img class="img-fluid rounded-circle"
-                            src="assets/img/circle_feedback_image.webp" alt="..." /></div>
+                            src="images/eco-planet.png" alt="..." /></div>
                 </div>
             </div>
         </div>
-    </section>
+    </section> 
     </body>
 </html>
