--- a/index.html
+++ b/index.html
@@ -30,7 +30,10 @@
                         something new!</p>
                 </div>
                 <div class="col-sm-8 col-md-6">
-                    <div class="px-5 px-sm-0"><img class="img-fluid rounded-circle"
+                    <div class="px-5 px-sm-0"><img 
+                                                   
+            <!-- class="img-fluid rounded-circle" -->
+                        
                             src="images/eco-planet.png" alt="..." /></div>
                 </div>
             </div>
