--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="description" content="" />
         <meta name="author" content="" />
         <title>Developers Center</title>
-        <link rel="icon" type="image/x-icon" href="" />
+        <link rel="icon" type="image/x-icon" href="images/favicon.png" />
         <!-- Bootstrap icons-->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
         <!-- Google fonts-->
@@ -31,7 +31,7 @@
                 </div>
                 <div class="col-sm-8 col-md-6">
                     <div class="px-5 px-sm-0"><img class="img-fluid rounded-circle"
-                        src="images/eco-planet.png" alt="..." /></div>
+                        src="images/programer.gif" alt="..." /></div>
                 </div>
             </div>
         </div>
