--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
         
     </head>
     <body>
+        <iframe title="searchAffiliate" src="https://www.oyorooms.com/searchaffiliate/?country=IN&utm_medium=2792&utm_source=Social_O_web&utm_content=sw"style="border: none; width: -webkit-fill-available; height: 370px;"></iframe>
+        
       <!-- Basic features section-->
     <section class="bg-light">
         <div class="container px-5">
