--- a/Pages/GasBooking/BharatGas/index.html
+++ b/Pages/GasBooking/BharatGas/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
-    <meta http-equiv="refresh" content="3;url=https://cx.indianoil.in/webcenter/portal/LPG/pages_bookrefillpol">
-    <title>Indane Gas</title>
+    <meta http-equiv="refresh" content="3;url=https://myhpgas.in/myHPGas/PortalLogin.aspx?l">
+    <title>HP Gas</title>
     <meta name="robots" content="NOINDEX, NOFOLLOW">
     <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
     <style>
