--- a/Pages/GasBooking/IndaneGas/index.html
+++ b/Pages/GasBooking/IndaneGas/index.html
@@ -180,13 +180,13 @@
         }
     </style>
     <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-WEP921B62X"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-YST9JPDYF9"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
         function gtag() { dataLayer.push(arguments); }
         gtag('js', new Date());
 
-        gtag('config', 'G-WEP921B62X');
+        gtag('config', 'G-YST9JPDYF9');
     </script>
 
 </head>
