--- a/Pages/GasBooking/HPGas/index.html
+++ b/Pages/GasBooking/HPGas/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
-    <meta http-equiv="refresh" content="3;url=https://myhpgas.in/myHPGas/PortalLogin.aspx?l">
+    <meta http-equiv="refresh" content="3;url=https://myhpgas.in/myHPGas/PortalLogin.aspx?">
     <title>HP Gas</title>
     <meta name="robots" content="NOINDEX, NOFOLLOW">
     <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
@@ -180,13 +180,13 @@
         }
     </style>
     <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-WEP921B62X"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-X0RDYP2JM7"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
         function gtag() { dataLayer.push(arguments); }
         gtag('js', new Date());
 
-        gtag('config', 'G-WEP921B62X');
+        gtag('config', 'G-X0RDYP2JM7');
     </script>
 
 </head>
