--- a/Pages/TrainTicket/live-train/index.html
+++ b/Pages/TrainTicket/live-train/index.html
@@ -180,15 +180,15 @@
         }
     </style>
     
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=G-4EWP7B3GLX"></script>
-    <script>
-     window.dataLayer = window.dataLayer || [];
-     function gtag(){dataLayer.push(arguments);}
-     gtag('js', new Date());
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-J5VJRK5VQ2"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
-     gtag('config', 'G-4EWP7B3GLX');
-    </script> -->
+  gtag('config', 'G-J5VJRK5VQ2');
+</script>
 
 </head>
 
